Created simple blog template

--- a/block-BHaaak/index.html
+++ b/block-BHaaak/index.html
@@ -20,3 +20,112 @@
 
 - use appropriate semantic tags and keep the nesting and indentation clean.
 - All the absolute must open in a new window. -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Demo</title>
+    <link rel="stylesheet" href="assests/stylesheet/style.css">
+</head>
+
+<body>
+    <header id="top">
+        <div>
+            <h1>Articles</h1>
+            <a href="index.html">About</a>
+            <a href="#">Contact</a>
+            <a href="services.html">Services</a>
+            <a href="google.html">Google</a>
+        </div>
+    </header>
+    <main>
+        <section>
+            <h2>Lorem ipsum dolar sit.</h2>
+            <img src="assests/media/mountain.jpeg" alt="boy" width="300px" height="250px">
+
+
+
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate libero earum beatae! Magnam a
+                quia rem? Ut non corporis id consectetur ducimus, iusto quisquam rem eum neque repellendus voluptatibus
+                laudantium quasi, architecto sit ex quas! Odit nostrum dolore totam voluptas molestias reprehenderit
+                sint, amet officia aliquam, delectus earum vel molestiae atque odio maxime pariatur, incidunt voluptatem
+                error a provident! Blanditiis quod ut vitae atque ipsa aliquam iste amet ipsum voluptate praesentium
+                ullam voluptatem, harum sapiente assumenda voluptatum dolorem tempora provident facere, quam natus.
+                Blanditiis minima magni expedita quis, excepturi officia quam. Vel eveniet, quibusdam excepturi quidem
+                ea quaerat voluptatem.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, voluptate. Deserunt id necessitatibus
+                error autem commodi odit fuga amet perferendis, ad ullam sunt quam cupiditate vero quisquam quos dolores
+                magnam exercitationem illum et placeat modi similique? Tenetur aperiam vitae voluptas, repellendus culpa
+                quo modi aliquam fuga voluptatem numquam minus ab tempora velit ipsa natus voluptates esse porro
+                officiis ipsum maiores ex saepe illum nesciunt! Aliquam similique deserunt atque dolorum eos numquam
+                minima esse. Fuga officiis illo eveniet voluptates itaque quaerat dolore quibusdam praesentium impedit
+                corporis et, voluptatum eaque enim pariatur tempore quasi dolores magni. Laudantium possimus, tempora
+                assumenda ab veniam ipsum deserunt, beatae unde fugit nisi voluptatem error aperiam. Soluta eligendi
+                dolorem ut reprehenderit repudiandae ab fugiat quo error inventore, sint quas saepe similique, nam dicta
+                sunt commodi fugit unde doloremque perspiciatis praesentium. Magni velit nisi eius perspiciatis est
+                impedit nam sint maxime, id vel tenetur labore aperiam neque quis ipsam aliquid, non nesciunt mollitia
+                fugit ut provident et at. Hic blanditiis ad sequi placeat fugit quasi error illo itaque, aperiam
+                quibusdam, assumenda nisi fuga nobis quidem, quo praesentium impedit facere reprehenderit? Pariatur
+                voluptates quibusdam cumque temporibus facilis quaerat in hic, optio cupiditate id voluptate incidunt,
+                ex ad fuga officiis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate soluta cum sunt eveniet molestias,
+                nostrum repellat veniam atque, sit vitae facilis earum nemo quaerat. Minima consequatur nobis hic
+                pariatur nesciunt iusto ipsum repudiandae, sit provident temporibus placeat doloremque aliquam dolorem
+                dolor, tenetur recusandae qui alias. Obcaecati aliquam numquam accusantium debitis aperiam nulla ex eius
+                ipsum ab est doloremque tenetur illum eos praesentium expedita molestiae soluta, rem enim impedit velit
+                possimus minima temporibus? Eos officiis soluta ducimus voluptate illum voluptates, ut fugiat numquam
+                officia quibusdam delectus explicabo animi corrupti laborum aut repudiandae quidem, veritatis
+                laboriosam! Ipsam, rem. Fugiat ipsa fugit deleniti? Dignissimos vel, architecto eligendi est at quisquam
+                molestiae modi reiciendis non error quia sunt harum earum atque magnam, ipsum provident?</p>
+        </section>
+        <section>
+            <h3>Ipsul Dolor Amet</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum inventore est eligendi itaque eius, modi
+                soluta placeat consequuntur culpa mollitia neque praesentium fugiat ex cupiditate asperiores quas quam
+                reprehenderit, obcaecati dignissimos libero, voluptate ipsam. Possimus, iure excepturi a maiores
+                nesciunt quia minus consectetur. Fugit, delectus! Molestiae amet est magnam. Sit officiis unde in, qui
+                eveniet tenetur consequuntur minus magni dolore, nulla fugiat hic. Laboriosam sequi ducimus culpa quis
+                dolorum architecto voluptas velit omnis voluptates vero iste similique magni ullam eius pariatur, saepe
+                laudantium fugiat, eaque perferendis mollitia perspiciatis nam dolorem quibusdam. Fugit exercitationem
+                similique omnis laborum distinctio quos eos animi hic quas aut! Nostrum nesciunt expedita modi
+                voluptatum! Magni, numquam autem. Quibusdam iusto quisquam tempore numquam laudantium magni laborum
+                sequi!</p>
+            <h3>Quia Dolor Corrupti</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores nesciunt adipisci sit maiores sed
+                architecto voluptatem quo. Quo voluptatem inventore sed. Architecto possimus et alias optio neque
+                reprehenderit inventore est. Soluta ipsam libero porro, beatae perspiciatis, sint facilis voluptas
+                perferendis, similique error blanditiis! Eaque quasi placeat hic, minus incidunt minima voluptates ut
+                doloribus repellat ratione impedit consectetur, quod nesciunt, vero saepe! Deleniti velit debitis beatae
+                optio numquam exercitationem ratione consectetur! Corrupti atque odio, provident impedit perferendis
+                quis harum recusandae quo optio eligendi, numquam excepturi enim animi cumque laudantium blanditiis nam.
+            </p>
+            <h3>Labore Velit Dolorum</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sed ipsa eveniet earum quae, rerum
+                laudantium fugiat tempore quas autem deleniti nam nulla odio distinctio sint eos reiciendis possimus
+                consequatur pariatur perspiciatis esse debitis tempora commodi voluptatibus? Earum culpa vel debitis
+                quos deserunt iusto voluptatum. Dignissimos ducimus a molestiae facere amet eveniet culpa id fugit vel
+                consequuntur odio rem asperiores voluptate sunt accusantium, hic in, dicta iste sequi necessitatibus
+                assumenda, velit eaque consequatur iusto? Consequatur repellendus, eligendi saepe quos illum architecto
+                repudiandae laborum deserunt reprehenderit placeat quo, possimus ab distinctio hic quaerat? Odio qui
+                rerum natus veniam voluptatibus dignissimos pariatur modi tempora! Ea cupiditate assumenda sint unde
+                odio, consectetur fugit quidem error fuga a itaque voluptatem doloribus autem officiis totam.</p>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <h4>Footer</h4>
+            <a href="http://www.fabebook.com" target="_blank"><span>Facebook</span></a>
+            <a href="https:www.instagram.com" target="_blank"><span>Instagram</span></a>
+            <a href="https://www.twitter.com" target="_blank"><span>Twitter</span></a>
+        </div>
+        <a href="mailto:abhikapoor661@gmail.com?Subject=My%20Query&body=I%20want%20to%20know%20about%20Altcampus"
+            class="myclass">Mail
+            Me</a>
+        <a href="#top" target="_blank" class="myclass">Back to top</a>
+    </footer>
+</body>
+
+</html>
